Moved Images Folder to assets

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                                     class="rooms clickable">
                                 
                                     <td v-if="roomindex === 0">
-                                        <img src="images/room1.jpg" alt="room1">
+                                        <img src="assets/images/room1.jpg" alt="room1">
                                     </td>
                                     <td v-else-if="roomindex === 1">
-                                        <img src="images/room2.jpg" alt="room2">
+                                        <img src="assets/images/room2.jpg" alt="room2">
                                     </td>
                                     <td>
                                         <strong>{{rooms.title}}</strong>
